<resources>
    <string name="app_name">CSI_week_1</string>
    <string name="qriminal_image_text">Mark Rutte, Crimineel</string>
    <string name="qriminal_name">Mark Rutte</string>
    <string name="qriminal_age">Age: 41</string>
    <string name="qriminal_gender">Gender: Male</string>
    <string name="qriminal_bounty">Bounty: $10.000</string>
    <string name="details">Details:</string>
    <string name="button_report">Report</string>
    <string name="button_picture">Take picture</string>
    <string name="button_call">Call 112</string>
    <string name="button_position_start">Start gps</string>
    <string name="button_position_stop">Stop gps</string>
    <string name="button_goback">Go back</string>
    <string name="button_send">Send</string>
    <string name="gpsPos">No gps location yet.</string>
    <string name="qriminal_info">Mark Rutte (Den Haag, 14 februari 1967) is een Nederlands politicus. Hij heeft alles gefraudeerd en Nederland helemaal naar de tyves geholpen. Hij wil een klimaatakoord accepteren waar de gemiddelde. In 2002 stapte Rutte over van het bedrijfsleven naar de landelijke politiek. Hij was staatssecretaris van Sociale Zaken en vervolgens van Onderwijs, Cultuur en Wetenschap in het eerste en tweede kabinet-Balkenende; tussen deze kabinetten in was hij nog kortstondig Tweede Kamerlid. Rutte verruilde in 2006 zijn staatssecretariaat voor het fractievoorzitterschap in de Tweede Kamer om zo als lijsttrekker zijn partij te leiden bij de verkiezingen van dat jaar. Die mondden uit in een nederlaag voor de VVD, waarna Rutte als leider van de fractie in de Tweede Kamer bleef. Nadat de VVD bij de Tweede Kamerverkiezingen 2010 onder Ruttes leiding de grootste partij werd, vormde zij met het christendemocratische CDA het kabinet-Rutte I, gedoogd door de PVV. Dat kabinet viel toen de PVV na anderhalf jaar haar gedoogsteun opzegde. Bij de verkiezingen in 2012 leidde Rutte de VVD naar 41 zetels, een recordaantal voor de partij. Het kabinet-Rutte II, waarin de VVD plaatsnam met de PvdA, werd het eerste kabinet sinds kabinet-Kok I (1998) dat de gehele regeertermijn volmaakte en het langstzittende kabinet sinds de Tweede Wereldoorlog. Na de verkiezingen in 2017, waarbij de VVD met 33 zetels opnieuw de grootste partij werd, en een lange kabinetsformatie werd op 26 oktober 2017 het kabinet-Rutte III beëdigd, gevormd door de partijen VVD, CDA, D66 en CU.Tegen de achtergrond van de kredietcrisis en de Europese staatsschuldencrisis is Ruttes premierschap vooral gekleurd door economische hervormingen. De traditionele verzorgingsstaat werd grondig herzien door het Lenteakkoord van 2012, waarmee na de val van Rutte-I een begroting werd uitgewerkt, en het beleid van Rutte-II. Zo ging de pensioenleeftijd versneld omhoog, werd de hypotheekrenteaftrek beperkt en nam het eigen risico in de zorg fors toe. Vanwege aanhoudend aardbevingsgevaar beloofde het derde kabinet in 2018 een einde te maken aan de gaswinning in Groningen, decennialang een pijler onder de Nederlandse economie.</string>
</resources>
